--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "when-traceable",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "main": "when.js",
   "scripts": {
-    "test": "mocha tests/tests.js"
+    "test": "mocha -R spec"
   },
   "author": {
     "name": "misonou"
